--- a/.github/workflows/RunCI.yml
+++ b/.github/workflows/RunCI.yml
@@ -36,7 +36,7 @@ jobs:
       
     - name: Deploy report to Github Pages
       if: always()
-      uses: peaceiris/actions-gh-pages@v3.7.3
+      uses: peaceiris/actions-gh-pages@v3.9.3
       with:
-       PERSONAL_TOKEN: ${{ secrets.TOKEN_DEPLOY_FINAL_PROJECT }}
+       PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        PUBLISH_DIR: report
