--- a/.github/workflows/RunCI.yml
+++ b/.github/workflows/RunCI.yml
@@ -38,6 +38,6 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v3.9.3
       with:
-       PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       PERSONAL_TOKEN: ${{ secrets.DEPLOY_SELENIUM }}
        PUBLISH_DIR: report
 #
